--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-rating": "^2.0.5",
+    "react-rating-star-with-type": "^1.2.1",
     "react-router-dom": "^6.18.0",
     "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
